repair the project with little bugs